--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title || "Capstone Blog" %></title>
+    <title>
+        <%= (typeof title !=='undefined' && title) ? title : 'Capstone Blog' %>
+    </title>
     <link rel="stylesheet" href="../public/css/styles.css">
 </head>
 <body>
