--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,7 @@
     <title>
         <%= (typeof title !=='undefined' && title) ? title : 'Capstone Blog' %>
     </title>
-    <link rel="stylesheet" href="../public/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <header class="site-header">
@@ -17,6 +17,6 @@
         <%- body %>
     </main>
 
-    <script src="../public/js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
